--- a/module_personal/src/main/res/layout/house_list_item.xml
+++ b/module_personal/src/main/res/layout/house_list_item.xml
@@ -62,7 +62,7 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="租金："/>
+                        android:text="日价："/>
 
                 <TextView
                         android:layout_width="wrap_content"
