机智云服务器使用

--- a/CommonRes/src/main/res/layout/public_air_conditioning_control_dialog.xml
+++ b/CommonRes/src/main/res/layout/public_air_conditioning_control_dialog.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
+              android:layout_height="match_parent"
               android:layout_marginLeft="@dimen/public_40_0dp"
               android:layout_marginRight="@dimen/public_40_0dp"
               android:background="@drawable/public_tips_dialog_shape">
