--- a/CommonRes/src/main/res/layout/public_tips_dialog.xml
+++ b/CommonRes/src/main/res/layout/public_tips_dialog.xml
@@ -2,12 +2,11 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:background="@drawable/public_tips_dialog_shape"
-        android:layout_gravity="center"
-        android:layout_marginLeft="@dimen/public_5_0dp"
-        android:layout_marginRight="@dimen/public_5_0dp">
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="@dimen/public_20_0dp"
+        android:layout_marginRight="@dimen/public_20_0dp"
+        android:background="@drawable/public_tips_dialog_shape">
 
 
     <TextView
